[package]
name = "rust-workshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = { version = "3.7.0" }
rand = { version = "0.8" }
reqwest = { version = "0.11.18" , features = ["json"] }
serde_json = { version = "1.0.99" }
url = { version = "2.4" }

[libs]
test = "tests/*.rs"
